<resources>
    <string name="app_name">Bs Nas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="logintagerss">Login As Tager</string>


    <string name="skip">skip</string>
    <string name="phoneNumber">PhoneNo.</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="EnterCode">Enter Code</string>

    <string name="changeNumber">Change Number</string>
    <string name="resend">Resend</string>
    <string name="createNewAccount">Create New Account</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumbers">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Next">Next</string>
    <string name="newAccount">Register</string>
    <string name="haveAccount">No Account?</string>
    <string name="Conditions">Terms and Conditions</string>
    <string name="forgetPassword">Forget Password ?</string>
    <string name="loginAsTrader">Login As Trader</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Offer</string>
    <string name="title_notifications">Fav</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="forget_password">Forget Password</string>
    <string name="done">done</string>
    <string name="detect_location">detect Location</string>
    <string name="choicelocation">Choice You Location</string>
    <string name="start">start</string>
    <string name="shope_name">Shope Name</string>
    <string name="CompleteJoin">Join Order</string>
    <string name="locationChoice">Location</string>
    <string name="title_activity_tader_main">TaderMainActivity</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend

    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="near_by_you">Near By You</string>
    <string name="favPlaces">Fav Places</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="product_name">Product Name</string>
    <string name="opioon">Clients</string>
    <string name="ALL">ALL</string>
    <string name="AddComment">Add Comment</string>
    <string name="rate">Rating</string>
    <string name="ProductDetails">Product Details</string>
    <string name="cancel">Cancel</string>
    <string name="NearByYou">closest to you</string>
    <string name="harf">Distinctive letter</string>
    <string name="Projects">Featured projects</string>
    <string name="locations">Location</string>
    <string name="searchNear">Find places nearby</string>
    <string name="details">details</string>
    <string name="offers">Offers</string>
    <string name="discover">View the latest special offers</string>
    <string name="Fav">Favorite</string>
    <string name="Fav2">your favorite places</string>
    <string name="supplier">Supplier Login</string>
    <string name="account">Account</string>
    <string name="join">Join request</string>
    <string name="notifications">Notifications</string>
    <string name="about">About App</string>
    <string name="share">Share</string>
    <string name="contactUs">Contact Us</string>
    <string name="chat">Chat</string>
    <string name="delete">delete</string>
    <string name="edite">Edit</string>
    <string name="MoreUs">About Us</string>
    <string name="products">More about our products</string>
    <string name="love">make products with love</string>
    <string name="info">info about Merchant</string>
    <string name="services">Services</string>
    <string name="tager">Merchant</string>
    <string name="storepage">Store Page</string>
    <string name="member">Membership validity</string>
    <string name="tagerinfo">Merchant Info</string>
    <string name="PackagesControl">Packages Control</string>
    <string name="logout">LogOut</string>
    <string name="setting">Setting</string>
    <string name="ProductCount">Product Count</string>
    <string name="CurrentProducts">Current Products</string>
    <string name="AddProduct">Add Product</string>
    <string name="unActive">UnActive</string>
    <string name="Pendding">Pending</string>
    <string name="Active">Active</string>
    <string name="PaymentPackages">Payment Packages</string>
    <string name="payment">Payment</string>
    <string name="paymentMethos">PaymentMethod</string>
    <string name="pay">pay</string>
    <string name="AddProducts">Add Products</string>
    <string name="ProductImage">Product Image</string>
    <string name="MainPicture">Main Picture</string>
    <string name="MorePicture">More Picture</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="deletConfirm">Delete Confirm</string>
    <string name="confirm">Confirm</string>
    <string name="back">back</string>
    <string name="EditeProduct">ُEdit Product</string>
    <string name="hide">Hide</string>
    <string name="ShowsALL">Show ALL</string>
    <string name="EditStore">Edit Store Data</string>
    <string name="changePassword">Change Password</string>
    <string name="send">send</string>
    <string name="EditeUserData">Edit User Data</string>
    <string name="editPassWord">Edit Password</string>
    <string name="NewPassWords">Enter New Password</string>
    <string name="EnterOldPassword">Enter Old Password</string>
    <string name="welcome"> Welcome </string>
</resources>