<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.market.presentation.mainscreen.user.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.market.presentation.mainscreen.user.ui.offers.OffersFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_dashboard_to_userMoreFragments"
            app:destination="@id/userMoreFragments" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.market.presentation.mainscreen.user.ui.favorite.FavoriteFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/userMoreFragments"
        android:name="com.market.presentation.mainscreen.user.ui.more.UserMoreFragments"
        android:label="fragment_user_more_fragments"
        tools:layout="@layout/fragment_user_more_fragments" >
        <action

            android:id="@+id/action_userMoreFragments_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>