<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.user.create.CreateUserAccountActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:rotation="180"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_navigate_next_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/text_medium"

        android:layout_marginTop="80dp"
        android:layout_marginBottom="64dp"
        android:text="@string/createNewAccount"
        android:textColor="#E37494"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/two_light"

            android:layout_marginTop="16dp"
            android:text="@string/fullName"
            android:textColor="#FC808080" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/two_light"

            android:padding="10dp"

            android:background="@drawable/editetext_rec"


            android:drawableStart="@drawable/avatar"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/two_light"

            android:text="@string/phoneNumbers"
            android:textColor="#FC808080" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="8dp"

            android:padding="10dp"

            android:background="@drawable/editetext_rec"
            android:drawableStart="@drawable/phone"
            android:ems="10"
            android:inputType="phone"
     />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:fontFamily="@font/two_light"

            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/Email"
            android:textColor="#FC808080" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:layout_marginTop="8dp"
            android:padding="10dp"
            android:background="@drawable/editetext_rec"

            android:drawableStart="@drawable/mail"
            android:ems="10"
            android:inputType="textEmailAddress"
         />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/password"
            android:fontFamily="@font/two_light"

            android:textColor="#FC808080" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/editetext_rec"

            android:layout_marginTop="8dp"

            android:padding="10dp"
            android:drawableStart="@drawable/ic_baseline_vpn_key_24"
            android:ems="10"
            android:inputType="textPassword"
           />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            style="@style/myMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/two_light"

            android:textSize="15sp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Next"
            app:backgroundTint="@null" />



        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/Conditions"
            android:fontFamily="@font/two_light"

            android:textColor="#E37494" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>