<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".presentation.location.MapsActivity" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        map:cardCornerRadius="30dp"
        map:layout_constraintBottom_toTopOf="@+id/button"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choicelocation"
                android:fontFamily="@font/text_medium"

                android:textColor="#808080" />

            <fragment android:id="@+id/autocomplete_fragment"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/editetext_rec"

                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:text="@string/detect_location"
                    android:fontFamily="@font/two_light"

                    android:textColor="#E37494"
                    map:layout_constraintBottom_toBottomOf="@+id/imageView6"
                    map:layout_constraintEnd_toEndOf="parent"
                    map:layout_constraintStart_toEndOf="@+id/imageView6"
                    map:layout_constraintTop_toTopOf="@+id/imageView6" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="15dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    map:layout_constraintStart_toStartOf="parent"
                    map:layout_constraintTop_toTopOf="parent"
                    map:srcCompat="@drawable/ic_baseline_location_searching_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/button"

        android:layout_width="match_parent"

        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@null"
        android:text="@string/Next"

        map:cardBackgroundColor="#E37494"
        map:cardCornerRadius="20dp"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:fontFamily="@font/text_medium"

            android:textSize="20dp" />
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>
